[tool.poetry]
name = "cr-tools"
version = "0.1.0"
description = ""
authors = ["Antonio Rodrigues"]
license = "none"

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^3.1"
igraph = "^0.10.4"

[tool.poetry.dev-dependencies]
networkx = "^3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
